data/all_generated_tests/raw_wast_tests/br_table_UnreachableCodeExecution_2139.wast
;; 9. **Test with Branch to Unintended Block:**    - Description: Create a scenario where `br_table` is misdirected due to incorrect label target setups resulting in an attempt to branch into a block that wasn't intended.    - Constraint Checked: Control flow constraints ensuring correct exit or loop back within structured instructions.    - Relates to Unreachable Code Execution: Incorrect branch targets can lead to unintended code paths ending with the `unreachable` instruction.

(assert_invalid
 (module
  (func
   (block (result i32)
    (block (result i32)
     (br_table 1 2 (i32.const 0))
    )
   )
  )
 )
 "unknown label"
)